fixed logo z-index

--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,7 @@ header > div, header nav {
 }
 #logo {
     margin-left: 30px;
+    z-index: 2;
 }
 nav {
     margin: 2%;
@@ -139,6 +140,7 @@ nav a:hover {
         align-items: center;
         transform: translateY(-200%);
         transition: transform 0.4s ease-in-out;
+
     }
     header nav ul {
         display: flex;
